# OpenVector

./: .gitignore
Client/: client.js  package.json
proto/: cot.proto
server/: CMakeLists.txt  CotServer.cpp  CotServer.h  cot.pb.c  cot.pb.cc  cot.pb.h  main.cpp
